# slurm-script-generator

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml  slurm.yml  static_analysis.yml  testing.yml
src/slurm_script_generator/: main.py  parse_groff.py  pragmas.py  sbatch.py  sbatch_parser.py  slurm_script.py
tests/unit/: test_app.py
