[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm-script-generator"
version = "0.1"
description = "Generate slurm scripts."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["python"]
authors = [{name = "Max"}]
classifiers = [
    "Development Status :: 3 - Alpha",
]
dependencies = [    
]


[project.optional-dependencies]
dev = ["check-manifest","black",
    "isort",
    "pytest",]
test = ["coverage"]

[project.urls]
"Source" = "https://github.com/max-models/slurm-script-generator"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
generate-slurm-script = "slurm_script_generator.main:main"
